--- a/src/style.css
+++ b/src/style.css
@@ -96,7 +96,8 @@ body {
     text-transform: uppercase;
     margin-bottom: 10px;
     font-size: 12px;
-    color: #222;
+    color: white;
+    font-weight: bold;
 }
 
 .player-current-score {
