Added Game Rules

--- a/src/style.css
+++ b/src/style.css
@@ -138,7 +138,7 @@ i {
     transition: margin 0.3s;
 }
 
-.btn-new { top: 45px;}
+.btn-new { top: 45px; font-weight: bold}
 .btn-roll { top: 403px;}
 .btn-hold { top: 467px;}
 
